{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 141,
  "lineage": "3b2cbb8b-8b33-e0e3-5506-4a91d3c7bd65",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0685bcc683dadb6b9",
            "arn": "arn:aws:ec2:ap-south-1:874443195170:instance/i-0f98b24cfcc544bb5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f98b24cfcc544bb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "730BATCH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02d2610fafb16c9d6"
              }
            ],
            "primary_network_interface_id": "eni-02d2610fafb16c9d6",
            "private_dns": "ip-192-168-1-221.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.221",
            "public_ip": "13.207.43.103",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a63ad0a05609d372",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08550b89208009a74",
            "tags": {
              "Name": "terraform-web-server"
            },
            "tags_all": {
              "Name": "terraform-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed712a1cf7b70fe4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "i-0f98b24cfcc544bb5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0556ff4f26ceb43a5",
            "arn": "arn:aws:ec2:ap-south-1:874443195170:elastic-ip/eipalloc-0556ff4f26ceb43a5",
            "association_id": "eipassoc-04c47623a88ed0d07",
            "domain": "vpc",
            "id": "eipalloc-0556ff4f26ceb43a5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09676dbb34b720ad4",
            "private_dns": "ip-192-168-1-34.ap-south-1.compute.internal",
            "private_ip": "192.168.1.34",
            "public_dns": "ec2-3-7-117-253.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.117.253",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "eipalloc-0556ff4f26ceb43a5",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:internet-gateway/igw-0147bf406ffa15ac3",
            "id": "igw-0147bf406ffa15ac3",
            "owner_id": "874443195170",
            "region": "ap-south-1",
            "tags": {
              "Name": "terra-igw"
            },
            "tags_all": {
              "Name": "terra-igw"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "igw-0147bf406ffa15ac3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0556ff4f26ceb43a5",
            "association_id": "eipassoc-04c47623a88ed0d07",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b0f0cba7282221c2",
            "network_interface_id": "eni-09676dbb34b720ad4",
            "private_ip": "192.168.1.34",
            "public_ip": "3.7.117.253",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08550b89208009a74",
            "tags": {
              "Name": "terra-nat-igw"
            },
            "tags_all": {
              "Name": "terra-nat-igw"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "nat-0b0f0cba7282221c2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:route-table/rtb-034c6e1a457799887",
            "id": "rtb-034c6e1a457799887",
            "owner_id": "874443195170",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b0f0cba7282221c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-pvt-rt"
            },
            "tags_all": {
              "Name": "terra-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtb-034c6e1a457799887",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-igw",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:route-table/rtb-0a00e587cc3eb8d79",
            "id": "rtb-0a00e587cc3eb8d79",
            "owner_id": "874443195170",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0147bf406ffa15ac3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-rt"
            },
            "tags_all": {
              "Name": "terra-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtb-0a00e587cc3eb8d79",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e3a2dc790b97539",
            "region": "ap-south-1",
            "route_table_id": "rtb-034c6e1a457799887",
            "subnet_id": "subnet-0f903d1becbb563ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtbassoc-09e3a2dc790b97539",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-igw",
            "module.vpc.aws_route_table.pvt-rt",
            "module.vpc.aws_subnet.pvt-subnet1",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022a3eaf5285aa5b0",
            "region": "ap-south-1",
            "route_table_id": "rtb-034c6e1a457799887",
            "subnet_id": "subnet-0999ad26a97a00cf5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtbassoc-022a3eaf5285aa5b0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.nat-igw",
            "module.vpc.aws_route_table.pvt-rt",
            "module.vpc.aws_subnet.pvt-subnet2",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83c3f06fc1eee77",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a00e587cc3eb8d79",
            "subnet_id": "subnet-08550b89208009a74"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtbassoc-0e83c3f06fc1eee77",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6adaea8e4c66536",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a00e587cc3eb8d79",
            "subnet_id": "subnet-091dc2432312c8a0b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "rtbassoc-0f6adaea8e4c66536",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:security-group/sg-0ed712a1cf7b70fe4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed712a1cf7b70fe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-sg",
            "name_prefix": "",
            "owner_id": "874443195170",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "sg-0ed712a1cf7b70fe4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:subnet/subnet-0f903d1becbb563ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f903d1becbb563ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874443195170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pvt-1"
            },
            "tags_all": {
              "Name": "pvt-1"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "subnet-0f903d1becbb563ed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:subnet/subnet-0999ad26a97a00cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0999ad26a97a00cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874443195170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pvt-2"
            },
            "tags_all": {
              "Name": "pvt-2"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "subnet-0999ad26a97a00cf5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:subnet/subnet-08550b89208009a74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08550b89208009a74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874443195170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pub-1"
            },
            "tags_all": {
              "Name": "pub-1"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "subnet-08550b89208009a74",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:subnet/subnet-091dc2432312c8a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091dc2432312c8a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874443195170",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "pub-2"
            },
            "tags_all": {
              "Name": "pub-2"
            },
            "vpc_id": "vpc-0378c03ae68d3bf03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "subnet-091dc2432312c8a0b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:874443195170:vpc/vpc-0378c03ae68d3bf03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0a0c940f114fcb4be",
            "default_route_table_id": "rtb-0252afd05019bf702",
            "default_security_group_id": "sg-0ee199e71f3f684f3",
            "dhcp_options_id": "dopt-053970f231be322df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0378c03ae68d3bf03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0252afd05019bf702",
            "owner_id": "874443195170",
            "region": "ap-south-1",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "874443195170",
            "id": "vpc-0378c03ae68d3bf03",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}